# filesync

./: README.md
client/: Cargo.toml  README.md
client/filesync/test/: world
client/src/: cli.rs  main.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
server/: .gitignore  Cargo.toml  README.md
server/migrations/2020-09-03-115516_files/: down.sql  up.sql
server/src/: cli.rs  db.rs  main.rs  models.rs  schema.rs
