[package]
name = "filesync-client"
version = "0.1.0"
authors = ["Aleksandr Vorontsov <aleksandr@vorontsov.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
filesync-core = { path = "../core" }
