[package]
name = "filesync-client"
version = "0.1.0"
authors = ["Aleksandr Vorontsov <aleksandr@vorontsov.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
filesync-core = { path = "../core" }
reqwest = {version = "0.10.7", features = ["blocking", "native-tls"] }
tokio = { version = "0.2", features = ["full"] }
serde = "^1.0"
serde_derive = "^1.0"
mime_guess = "2"
rayon = "1.3.1"
walkdir = "2"
