[package]
name = "filesync-core"
version = "0.1.0"
authors = ["Aleksandr Vorontsov <aleksandr@vorontsov.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "filesync_core"
path = "src/lib.rs"

[dependencies]
flate2 = "1.0.14"
sha-1 = "0.9.0"
