[package]
name = "filesync-server"
version = "0.1.0"
authors = ["Aleksandr Vorontsov <aleksandr@vorontsov.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
filesync-core = { path = "../core" }
openssl = { version = "0.10", features = ["v110"] }
actix-web = { version = "2.0.0", features = ["rustls", "openssl"] }
actix-rt = "1"
futures = "0.3.1"
actix-multipart = "0.2.0"
async-std = "1.4.0"
sanitize-filename = "0.2"
env_logger = "0.7"
lazy_static = "1.4.0"
confy = "0.4.0"
serde = "^1.0"
serde_derive = "^1.0"
